--- a/assets/app.html
+++ b/assets/app.html
@@ -637,11 +637,11 @@ html {
             </div>
           <li class="license-box information-box">
             <div>
-              <span class="product-name">github.com/syndtr/goleveldb</span>
+              <span class="product-name">go.etcd.io/bbolt</span>
             </div>
             <div class="link">
-              <a class="product-link" href="https://github.com/syndtr/goleveldb">github.com/syndtr/goleveldb</a>
-              <a class="license-link" href="https://github.com/syndtr/goleveldb/blob/master/LICENSE">{{ or .BSD2ClauseLicense "BSD 2-clause license" }}</a>
+              <a class="product-link" href="https://github.com/etcd-io/bbolt">https://github.com/etcd-io/bbolt</a>
+              <a class="license-link" href="https://github.com/etcd-io/bbolt/blob/master/LICENSE">{{ or .MITLicense "MIT license" }}</a>
             </div>
           <li class="license-box information-box">
             <div>
@@ -667,6 +667,23 @@ html {
               <a class="product-link" href="https://github.com/go-yaml/yaml">https://github.com/go-yaml/yaml</a>
               <a class="license-link" href="https://github.com/go-yaml/yaml/blob/v2/LICENSE">{{ or .ApacheLicense2_0 "Apache License 2.0" }}</a>
               <a class="license-link" href="https://github.com/go-yaml/yaml/blob/v2/LICENSE.libyaml">{{ or .MITLicense "MIT license" }}</a>
+            </div>
+
+          <li class="license-box information-box">
+            <div>
+              <span class="product-name">golang.org/x/sys</span>
+            </div>
+            <div class="link">
+              <a class="product-link" href="https://github.com/golang/sys">https://github.com/golang/sys</a>
+              <a class="license-link" href="https://github.com/golang/sys/blob/master/LICENSE">{{ or .BSD3ClauseLicense "BSD 3-clause license" }}</a>
+            </div>
+          <li class="license-box information-box">
+            <div>
+              <span class="product-name">gopkg.in/check.v1</span>
+            </div>
+            <div class="link">
+              <a class="product-link" href="https://github.com/go-check/check">https://github.com/go-check/check</a>
+              <a class="license-link" href="https://github.com/go-check/check/blob/v1/LICENSE">{{ or .BSD2ClauseLicense "BSD 2-clause license" }}</a>
             </div>
         </ul>
       </article>
