refactoring: replace MainImg by ImageFader

--- a/assets/app.html
+++ b/assets/app.html
@@ -29,7 +29,7 @@ html {
 </head>
 <body class="unload light {{ or .direction "ltr" }}">
 <div id="background" class="background">
-  <div id="background-image" class="background-image"></div>
+  <div id="background-image" class="background-image show"></div>
   <div id="background-image2" class="background-image"></div>
   <div id="background-overlay" class="background background-overlay"></div>
 </div>
